{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 14,
  "lineage": "5adb1bbf-6036-bfce-9c18-4a39994a1a96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "myapp_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:754080462526:route-table/rtb-0f9c1d4f2f96fec43",
            "default_route_table_id": "rtb-0f9c1d4f2f96fec43",
            "id": "rtb-0f9c1d4f2f96fec43",
            "owner_id": "754080462526",
            "propagating_vgws": [],
            "region": "me-central-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a549a04ac25bca2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068806e7f82bb5f97"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myapp_igw",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:754080462526:security-group/sg-0c2d01b56c17f9c6e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2d01b56c17f9c6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "20.192.21.53/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "754080462526",
            "region": "me-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-068806e7f82bb5f97"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05e66df2bafcb7dea",
            "arn": "arn:aws:ec2:me-central-1:754080462526:instance/i-0bf6cd3b170e3102b",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf6cd3b170e3102b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "serverkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-092792515d5ce54bb"
              }
            ],
            "primary_network_interface_id": "eni-092792515d5ce54bb",
            "private_dns": "ip-10-0-10-254.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.254",
            "public_ip": "158.252.93.29",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b868989edac79c25",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008cd4d33443f15c8",
            "tags": {
              "Name": "dev-ec2-instance"
            },
            "tags_all": {
              "Name": "dev-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2d01b56c17f9c6e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "754080462526",
            "id": "i-0bf6cd3b170e3102b",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_default_security_group.default_sg",
            "aws_key_pair.serverkey",
            "aws_subnet.myapp_subnet",
            "aws_vpc.myapp_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:754080462526:internet-gateway/igw-02a549a04ac25bca2",
            "id": "igw-02a549a04ac25bca2",
            "owner_id": "754080462526",
            "region": "me-central-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-068806e7f82bb5f97"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:754080462526:subnet/subnet-008cd4d33443f15c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008cd4d33443f15c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754080462526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "me-central-1",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-068806e7f82bb5f97"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "754080462526",
            "id": "subnet-008cd4d33443f15c8",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:754080462526:vpc/vpc-068806e7f82bb5f97",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0601bdbf8ccf94c56",
            "default_route_table_id": "rtb-0f9c1d4f2f96fec43",
            "default_security_group_id": "sg-0c2d01b56c17f9c6e",
            "dhcp_options_id": "dopt-0c226be11fcb44d5b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068806e7f82bb5f97",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f9c1d4f2f96fec43",
            "owner_id": "754080462526",
            "region": "me-central-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "754080462526",
            "id": "vpc-068806e7f82bb5f97",
            "region": "me-central-1"
          }
        }
      ]
    }
  ]
}